deploy-nodered/manifest/_nodered-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: nodered
  labels:
    name: nodered
