deploy-nodered/manifest/nodered-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nodered
  name: nodered
  namespace: nodered
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodered
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nodered
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - image: nodered/node-red:latest
          imagePullPolicy: IfNotPresent
          name: nodered
          ports:
            - containerPort: 1880
              name: nodered-tcp
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: nodered-pvc
              subPath: _nodered
      volumes:
        - name: nodered-pvc
          persistentVolumeClaim:
            claimName: node-red-pvc
