deploy-nodered/manifest/nodered-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nodered-service
  namespace: nodered
  annotations:
    metallb.universe.tf/address-pool: default
    metallb.universe.tf/allow-shared-ip: "nodered"
spec:
  selector:
    app: nodered
  externalTrafficPolicy: Local
  type: LoadBalancer
  loadBalancerIP: 192.168.0.238
  ports:
      - port: 48082
        targetPort: nodered-tcp
        name: nodered-tcp
        protocol: TCP
      - port: 9080
        targetPort: alexa-port
        name: alexa-tcp
        protocol: TCP
      - port: 34566
        targetPort: alexa-token-prt
        name: alexa-token-prt
        protocol: TCP
