deploy-nodered/manifest/nodered-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodered-ingress
  namespace: nodered
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip

spec:
  rules:
    - http:
        paths:
          - path: /     
            pathType: Prefix
            backend:
              service:
                name:  nodered-service
                port:
                  number: 48082
    - http:
        paths:
          - path: /description.xml
            pathType: Exact
            backend:
              service:
                name:  nodered-service
                port:
                  number: 9080
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name:  nodered-service
                port:
                  number: 9080
